# dockerdeploy

./: .gitignore  .goreleaser.yml  Cargo.toml  Dockerfile  Makefile  README.md  config.toml.example  config.yml.sample  go.mod  go.sum  main.go
.circleci/: config.yml
.github/workflows/: go.yml
config/: config.go  config_test.go
controller/: controller.go  controller_test.go  dockerclient.go  messages.go  status.go
internal/config/: config.go
internal/controller/: controller.go  controller_test.go
src/: config.rs  dockerclient.rs  gitlab.rs  handlers.rs  main.rs  routes.rs
