[package]
name = "dockerdeploy"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.5.0"
tokio = { version = "0.2.12", features = ["macros", "sync"] }
structopt = "0.3.9"
anyhow = "1.0.26"
warp = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
hyper = "0.13.2"
listenfd = "0.3.3"
